--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "speech-assistant-openai-realtime-api-node",
   "version": "1.0.1",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
+  "engines": { "node": ">=20" },
   "dependencies": {
     "@fastify/formbody": "^8.0.0",
     "@fastify/websocket": "^11.0.0",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
+    "pg": "^8.11.5",
     "ws": "^8.18.0"
   }
 }
